# social_stimulus_preference

./: LICENSE  README.md  dataset_social_stimulus_preference.xlsx
Social_3D_Animation_PreferenceTest/src/: CMakeLists.txt  environment.yml  extern.cpp  extern.h  maestro.cpp  maestro.h  main.cpp  modelApp.h  session.cpp  session.h  yolo_v2_class.hpp
Social_3D_Animation_PreferenceTest/src/YOLO_models/: .gitattributes  yolov3_zebrafish.cfg  yolov3_zebrafish_best.weights
Social_3D_Animation_PreferenceTest/src/cmake/modules/: FindTensorFlow.cmake
Social_3D_Animation_PreferenceTest/src/train/: .gitattributes  trt_graph.pb
